# eplink-spred2bids-mri

./: .gitignore  README.md  pyproject.toml
config/: config.yml  config_analyze.yml  config_download.yml  config_download_EPL09.yml  config_download_LHS_B.yml  config_download_TWH.yml
logs/convert_dcm_to_bids/: sub-HSC0003_ses-baseline_T1w.txt  sub-HSC0003_ses-baseline_dwisingleshellAP.txt  sub-HSC0003_ses-baseline_fmapTwoPhase.txt  sub-HSC0003_ses-baseline_rest.txt  sub-TWH0002_ses-baseline_rest.txt  sub-TWH0003_ses-baseline_T1w.txt  sub-TWH0003_ses-baseline_rest.txt  sub-TWH0004_ses-baseline_T1w.txt  sub-TWH0009_ses-baseline_movie.txt  sub-TWH0009_ses-baseline_rest.txt  sub-TWH0013_ses-baseline_dwisingleshellAP.txt  sub-TWH0013_ses-baseline_rest.txt  (+60 more)
resources/: failed_subjects_T1w.tsv  failed_subjects_dwiPepolar.tsv  failed_subjects_dwimultishellAP.tsv  failed_subjects_dwisingleshellAP.tsv  failed_subjects_fmapTwoPhase.tsv  failed_subjects_movie.tsv  failed_subjects_rest.tsv  nofailed_subjects_T1w.tsv  nofailed_subjects_dwiPepolar.tsv  nofailed_subjects_dwisingleshellAP.tsv  nofailed_subjects_fmapMagImages.tsv  nofailed_subjects_fmapPhaseDiff.tsv  nofailed_subjects_fmapTwoPhase.tsv  nofailed_subjects_movie.tsv  nofailed_subjects_rest.tsv  subjects.tsv  subjects_HSC.txt  subjects_LHS.txt  subjects_T1w.tsv  subjects_TWH.txt  subjects_dwiPepolar.tsv  subjects_dwimultishellAP.tsv  subjects_dwimultishellPA.tsv  subjects_dwisingleshellAP.tsv  subjects_dwisingleshellPA.tsv  subjects_fmapTwoPhase.tsv  subjects_movie.tsv  subjects_rest.tsv
workflow/: Snakefile
(+23 files in other folders)
