[tool.poetry]
name = "eplink-prelim"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.4"
neuroCombat = "^0.2.12"
pandas = "^1.3.4"
nilearn = "^0.8.1"
matplotlib = "^3.5.0"
neurocombat-sklearn = "^0.1.3"
snakemake = "^6.10.0"
nbconvert = "^6.3.0"
fmridenoise = "^0.2.1"
snakebids = "^0.3.16"
xnat = "^0.3.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
