[tool.poetry]
name = "eplink-spred2bids-mri"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
snakemake = "^6.10.0"
xnat = "^0.3.28"
pulp = "<2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
